Fix filter modal dot indicator positioning for wrapped field name

--- a/packages/components/src/theme/search.scss
+++ b/packages/components/src/theme/search.scss
@@ -73,15 +73,17 @@
         line-height: 15px;
         background-color: $badge-color;
         display: inline-block;
+        margin-top: 4px;
     }
 
     .search_field_dot {
+        position: absolute;
+        top: 13px;
+        right: 10px;
         height: 10px;
         width: 10px;
         border-radius: 50%;
-        display: inline-block;
         background-color: $badge-color;
-        margin-top: 5px;
     }
 
     .parent-search-panel__col-title {
